--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>おれのHP</title>
+		<title>ページ俺のホームページ！</title>
 	</head>
 	<body>
-		<h1>ようこそおれのHP!!</h1>
-		<p>春休みっていいな!!</p>
+		<h1>ついにできたホームページ！</h1>
+		<p>もう一回成長期がきてほしい！！！</p>
+		<p>亜鉛を摂取すれば身長が伸びる</p>
 	</body>
 </html>
