--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 		<p>もう一回成長期がきてほしい！！！</p>
 		<p>亜鉛を摂取すれば身長が伸びる</p>
 		<p>https://sdkfz181tiger.github.io/my_hp/</p>
+		<p>↑これが本物↑</p>
+		<p>文字がたくさんあった方がホームページっぽい</p>
 	</body>
 </html>
