できてくれ

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 	<body>
 		<h1>ついにできたホームページ！</h1>
 		<p>もう一回成長期がきてほしい！！！</p>
-		<p>亜鉛を摂取すれば身長が伸びる</p>
-		<p>https://sdkfz181tiger.github.io/my_hp/</p>
-		<p>↑これが本物↑</p>
-		<p>文字がたくさんあった方がホームページっぽい</p>
+		<p>
+			<a href = "test">Phoenix Ver1.0</a>
+		</p>
 	</body>
 </html>
