新たなホームページ

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
 	</head>
 	<body>
 		<h1>ついにできたホームページ！</h1>
-		<p>もう一回成長期がきてほしい！！！</p>
+		<p>超力作シューティング</p>
 		<p>
-			<a href = "test">Phoenix Ver1.0</a>
+			<a href = "test1">Phoenix Ver1.0</a>
+		</p>
+		<p>まだ伸びしろ</p>
+		<p>
+		     <a href = "test2">COVID Ver1.0</a>
+		</p>
+		<p>1より良くない2</p>
+		<p>
+			<a href="test3">DAY BREAK2 Ver1.0</a>
 		</p>
 	</body>
 </html>
